author description image wrap height fixed

--- a/src/assets/style/home/_author-descriptions.scss
+++ b/src/assets/style/home/_author-descriptions.scss
@@ -20,6 +20,10 @@
   box-shadow: 2px 2px 6px 4px $text-color;
 }
 
+.author-description__wrap-img {
+  min-height: 275px;
+}
+
 .author-description__link {
   display: flex;
   justify-content: end;
